# nonkycbot

./: .bandit  .gitignore  AUTHENTICATION_FIX.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_VERIFICATION.md  CLAUDE.md  COMPATIBILITY_AUDIT.md  CROSS_PLATFORM_COMPATIBILITY.md  GRID_SPACING_GUIDE.md  GRID_STRATEGIES_EXPLAINED.md  HYBRID_ARB_README.md  INFINITY_GRID_GUIDE.md  LICENSE  NOTICE  PROFIT_VALIDATION.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SECURITY_AND_CODE_AUDIT_REPORT.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING.md  check_grid_balances.py  cosa_arb_config.yml  cosa_pirate_grid.yml  debug_auth.py  debug_pairs.py  discover_markets.py  mmx_usdt_grid.yml  mmx_usdt_sell_grid.yml  nonkyc_store_credentials.py  pirate_arb_config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  roadmap.mp  run_adaptive_capped_martingale.py  run_arb_bot.py  run_cosa_arb.py  run_grid.py  (+10 more)
.github/: CODEQL_SUPPRESSIONS.md  codeql-config.yml  dependabot.yml
HUMMINGBOT_API_REFERENCE_CODE/: dummy.cpp  nonkyc_api_order_book_data_source.py  nonkyc_api_user_stream_data_source.py  nonkyc_auth.py  nonkyc_constants.py  nonkyc_exchange.py  nonkyc_order_book.py  nonkyc_utils.py  nonkyc_web_utils.py
bots/: __init__.py  run_accumulation_bot.py  run_adaptive_capped_martingale.py  run_arb_bot.py  run_grid.py  run_hybrid_arb_bot.py  run_infinity_grid.py  run_market_maker.py  run_rebalance_bot.py
docs/: CONFIG_REFERENCE.md
examples/: accumulation_bot.yml  adaptive_capped_martingale_btc_usdt.yml  arb_usdt_eth_btc.yml  cosa_accumulation_bot.yml  grid.yml  grid_cosa_pirate.yml  (+12 more)
(+88 files in other folders)
